<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">随意</string>
    <!--===================================公共的=============================-->
    <string name="toast_nomoredata">没有更多数据了</string>
    <string name="content_is_empty">内容不能为空!</string>
    <string name="avoidClickAgain">请勿重复操作!</string>
    <string name="inDevelopment">正在开发,敬请期待!</string>
    <string name="clearCacheSuccess">清除缓存成功!</string>
    <string name="back">返回</string>


    <!--===================================网络相关=============================-->
    <string name="empty_network_error">网络错误，点击重试！</string>
    <string name="empty_no_data">没有请求到数据，点击重试…</string>
    <string name="wechat_select">微信精选</string>
    <string name="load_more_error">加载更多数据失败！</string>


    <!--====================================二维码相关字符=============================-->
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>


    <!--=====================================底部导航栏字符=============================-->
    <string name="home">首页</string>
    <string name="investment">公众号</string>
    <string name="mine">我的</string>

    <!--=====================================登录界面字符=============================-->
    <string name="splash_animationone">我们很</string>
    <string name="splash_animationtwo">不随意</string>

    <!--=====================================登录界面字符=============================-->

    <string name="login">登录</string>
    <string name="login_reset">请重新登录!</string>
    <string name="login_account_prompt">请输入账号</string>
    <string name="login_pasword_prompt">请输入密码</string>
    <string name="login_otherwaylogin">试试临时登录?</string>
    <string name="login_rigister">要不注册一个?</string>


    <!--=====================================注册界面字符=============================-->
    <string name="rigiser">注册</string>
    <string name="rigister_account">请输入注册用户名(长度至少为6-16)</string>
    <string name="rigister_pwd">请输入注册密码(长度至少为6-16)</string>
    <string name="rigister_confirmpwd">请确认注册密码</string>
    <string name="toast_pwdnotequel">两次输入密码不一致</string>
    <string name="toast_accountlength">账号长度不符</string>
    <string name="toast_pwdlength">密码长度不符</string>


    <!--=====================================左侧滑菜单字符=============================-->
    <string name="sideslip_welcom">欢迎%s今日签到</string>
    <string name="sideslip_myintegral">我的积分&#8194;</string>

    <string name="theme">更改主题</string>
    <string name="favorite">收藏</string>
    <string name="notebook">记事本</string>
    <string name="photo">相册</string>
    <string name="changelanguage">中英文切换</string>
    <string name="loginout">退出登录</string>


    <!-- ************自定义WRecyclerview************ -->
    <string name="wrecyclerview_footer_hint_normal">查看更多</string>
    <string name="wrecyclerview_footer_hint_ready">上拉加载更多</string>
    <string name="wrecyclerview_footer_hint_loading">正在拼命加载中&#8230;</string>

    <!--=====================================首页搜索按钮=============================-->
    <string name="search_prompt">请输入搜索内容</string>
    <string name="search_cancel">取消</string>
    <string name="search_back">返回</string>
    <string name="search_history">搜索历史</string>
    <string name="search_clear">清除历史</string>
    <string name="search_trend">搜索趋势</string>
    <string name="search_batch">换一批</string>
    <string name="search_endbatch">最后一批</string>
    <string name="search_noresult">很抱歉,没有查到相关结果!</string>


    <!--=====================================我的Fragment相关字符=============================-->
    <string name="toolbar_mine_title">我的</string>
    <string name="toolbar_mine_settting">设置</string>
    <string name="recommended_artical">推荐文章</string>
    <string name="recommended_video">推荐视频</string>
    <string name="recommended_music">推荐音乐</string>
    <string name="recommended_statistical">统计预览</string>
    <string name="more">更多服务</string>


    <!--==========收藏界面toast提示=========-->
    <string name="toast_collectsuccess">收藏成功</string>
    <string name="toast_deletecolletcsuccess">已删除该收藏数据</string>
    <string name="toast_deletecolletcfail">删除收藏数据失败</string>

    <!--=====================================积分页面相关字符=============================-->
    <string name="integral_title">积分记录</string>
    <string name="integral_order">排行榜</string>
    <!--=====================================广场数据页面相关字符=============================-->
    <string name="squaredata_title">广场数据</string>
</resources>
