<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/dividerOne">
        <item
            android:id="@+id/theme"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/theme"/>
    <item
        android:id="@+id/favorite"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/notebook"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/notebook"/>
    </group>
    <group android:id="@+id/dividerTwo">
    <item
        android:id="@+id/photo"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/photo"/>
    <item
        android:id="@+id/settting"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/changelanguage"/>
    </group>
    <item
        android:id="@+id/loginout"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/loginout"/>
</menu>