<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLinear_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    >
    <LinearLayout
       android:orientation="horizontal"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout" />

   <!--<include android:id="@+id/baselayout" layout="@layout/activity_newbase"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="40dp"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            android:visibility="visible"
            />
        <!--  android:divider="@drawable/divider"-->
        <LinearLayout
            android:id="@+id/layout_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:showDividers="middle"
            >

            <EditText
                android:id="@+id/edt_account_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_merchantname"
                android:hint="@string/login_account_prompt"
                android:padding="10dp"
                android:textColor="?attr/custom_attr_app_textcolor"
                android:textColorHint="#d2d2d2"
                android:textCursorDrawable="@null"

                />

            <EditText
                android:id="@+id/edt_pwd_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/shape_merchantname"
                android:layout_marginTop="20dp"
                android:hint="@string/login_pasword_prompt"
                android:padding="10dp"
                android:textColor="?attr/custom_attr_app_textcolor"
                android:textColorHint="#d2d2d2"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:layout_marginTop="10px">

        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_rigister"
            android:textColor="?attr/custom_attr_app_textcolor"
            android:layout_alignParentLeft="true"

            />

        <TextView
            android:id="@+id/tv_otherwaylogin_login"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_otherwaylogin"
            android:textColor="?attr/custom_attr_app_textcolor"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_loginin_login"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="?attr/custom_attr_app_btn_bg"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login"
            android:textSize="17sp" />



        <!-- 此布局就是充当占位符,用于计算底部空白区域高度，没有实际意义 -->
        <RelativeLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_cannot_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="14dp"
                android:visibility="invisible"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>